SourceOrg/src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Endowment_Last_Contact_Purpose__c</fullName>
        <description>Code description - purpose of last contact (e.g. cultivation, solicitation )</description>
        <inlineHelpText>Purpose of last contact (e.g. cultivation, solicitation )</inlineHelpText>
        <label>Endowment Last Contact Purpose</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Major Gift Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide/Request Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation - Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contact_Type__c</fullName>
        <description>Code description - type of last contact (e.g. visit, phone call, e-mail)</description>
        <inlineHelpText>Type of last contact (e.g. visit, phone call, e-mail)</inlineHelpText>
        <label>Endowment Last Contact Type</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Contact Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call/Letter/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Gift_Date__c</fullName>
        <description>Date when the latest endowment was received</description>
        <inlineHelpText>Date when the latest endowment was received.</inlineHelpText>
        <label>Endowment Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <description>The &quot;Number&quot; for each record from the corresponding Source System</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter/Import the &quot;Number&quot; for each record from the corresponding Source System. This is an optional field.</inlineHelpText>
        <label>Event Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>Contract/Agreement Execution Date</description>
        <inlineHelpText>Enter Contract/Agreement Execution Date</inlineHelpText>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date When an Agreement(from KUCTC) Expires</description>
        <inlineHelpText>Date When an Agreement(from KUCTC) Expires</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_Obtained__c</fullName>
        <description>How was the Job/Internship Obtained</description>
        <inlineHelpText>How was the Job/Internship Obtained</inlineHelpText>
        <label>How Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>KU Supported Efforts - Alumni Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Supported Efforts - Career Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Supported Efforts - Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Supported Efforts - Faculty Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU Supported Efforts - Internship obtained through Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Facilitated - Internship not obtained through Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Facilitated - Other source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Facilitated - Personal Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Track_Code__c</fullName>
        <label>IP Track Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <description>Initial Term for Joint Supervisor</description>
        <inlineHelpText>Initial Term for Joint Supervisor</inlineHelpText>
        <label>Initial Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Source_KU_Division__c</fullName>
        <description>KU Division that provided the data.</description>
        <inlineHelpText>KU Division that provided the data.</inlineHelpText>
        <label>Engagement Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center For Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Source_System_ID__c</fullName>
        <description>Unique identifier from KU Division datasource for this engagement transaction (where available).</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier from KU Division datasource for this engagement transaction (where available).</inlineHelpText>
        <label>Engagement Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Source_System__c</fullName>
        <description>Source System From Where The Interaction Was Imported</description>
        <inlineHelpText>Source System From Where The Interaction Was Imported</inlineHelpText>
        <label>Engagement Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reggie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symplicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Entry</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <description>Type of Engagement.</description>
        <inlineHelpText>Type of Engagement.</inlineHelpText>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Company Onsite Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Executive Briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Key Executive Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - KU Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Seminar By Firm At KU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement - Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job/Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job/Placement Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Invention Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Patent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Campus Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internship_Area__c</fullName>
        <description>Job Area For Internships</description>
        <inlineHelpText>Job Area For Internships</inlineHelpText>
        <label>Internship Area</label>
        <picklist>
            <picklistValues>
                <fullName>IS_ACCOUNTINGTAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_ACCOUNTINGAUDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_ACCOUNTINGOTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FINANCEINVEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FINANCECORPORATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FINANCECOMMERCIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FINANCEFINANCIALSVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FINANCEOTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_GENERALMGMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_HUMANRESOURCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_INFOSYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_INTERNATIONALBUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MARKETINGBRAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MARKETINGADVERTISING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MARKETINGPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MARKETINGMARKETANALYSIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MARKETINGMARKETRESEARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MARKETINGOTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_SALES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_SUPPLYCHAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Internship_Level__c</fullName>
        <description>Level During Internship</description>
        <inlineHelpText>Level During Internship</inlineHelpText>
        <label>Internship Level</label>
        <picklist>
            <picklistValues>
                <fullName>Business - Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business - UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAcc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invention_Track_Code__c</fullName>
        <label>Invention Track Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Paid_Internship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator of whether the Internship was paid or not</description>
        <inlineHelpText>Indicator of whether the Internship was paid or not</inlineHelpText>
        <label>Is Paid Internship?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Area__c</fullName>
        <description>Job Area For Placements</description>
        <inlineHelpText>Job Area For Placements</inlineHelpText>
        <label>Job Area</label>
        <picklist>
            <picklistValues>
                <fullName>IS_ACCOUNTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FINANCIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MANUFACTURING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_NOTFORPROFIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_REALESTATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_ADVERTISING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_CONSUMERPRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_FOODBEVERAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MEDIAENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_PETROENERGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_RELIGIOUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_AUTOTRANSPORTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_ENVIRONMENTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_GOVERNMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_MILITARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_PHARMACEUTICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_TECHNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS_OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Placement/Internship Job Function</description>
        <inlineHelpText>Placement/Internship Job Function</inlineHelpText>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting - Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting - Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Business Development/M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Commercial Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Corporate Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Investment Banking/Investment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems/Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Brand Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Market Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations/Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Posting_Position_Type__c</fullName>
        <description>Job Posting - Position Type</description>
        <inlineHelpText>Job Posting - Position Type</inlineHelpText>
        <label>Job Posting - Position Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellowships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Experienced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Term (archived)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time/Student Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer (archived)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Joint_Disclosure_Date__c</fullName>
        <description>Joint Disclosure Date</description>
        <inlineHelpText>Joint Disclosure Date</inlineHelpText>
        <label>Joint Disclosure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Joint_Patent_Type__c</fullName>
        <description>Joint Patent Type</description>
        <inlineHelpText>Joint Patent Type</inlineHelpText>
        <label>Joint Patent Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation in Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copyright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Patent Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent Cooperation Treaty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KU_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related KU Contact</description>
        <inlineHelpText>Related KU Contact</inlineHelpText>
        <label>KU Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>KU Contacts</value>
            </filterItems>
            <infoMessage>Selected Contact Should Be An Internal Contact</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagements (KU Contact)</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_IT_Vendor_Executive_Briefings__c</fullName>
        <description># Key IT Vendor Executive Briefings</description>
        <inlineHelpText># Key IT Vendor Executive Briefings</inlineHelpText>
        <label># Key IT Vendor Executive Briefings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lab__c</fullName>
        <description>Lab Name</description>
        <inlineHelpText>Lab Name</inlineHelpText>
        <label>Lab</label>
        <picklist>
            <picklistValues>
                <fullName>High Throughput Screening Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation Design Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Spectrometry Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicinal Chemistry Core Service Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microscopy Analytical Imaging Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Molecular Graphics &amp; Modeling Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Magnetic Resonance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-ray Crystallography Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_Relationship_In_Interaction_Level__c</fullName>
        <description>Days Since The Oldest Engagement Related Date</description>
        <formula>IF( 
AND(
ISNULL( Activity_Due_Date__c ),
ISNULL( Effective_Date__c ),
ISNULL( End_Date__c ),
ISNULL( Endowment_Last_Contact_Date__c ),
ISNULL(Endowment_Last_Gift_Date__c),
ISNULL( Execution_Date__c ),
ISNULL( Expiration_Date__c ),
ISNULL( Patent_Application_Date__c ),
ISNULL( Patent_Issue_Date__c ),
ISNULL( Joint_Disclosure_Date__c ),
ISNULL( Created_Date__c ),
ISNULL( Source_System_Last_Modified_Date__c ),
ISNULL( Start_Date__c ),
ISNULL( Termination_Date__c ),
ISNULL(Endowment_Gift_Last_1__c),
ISNULL(Endowment_Gift_Last_2__c),
ISNULL(Endowment_Gift_Last_3__c)
),
0, 
MAX(
IF(ISNULL( Activity_Due_Date__c ),0,TODAY() - Activity_Due_Date__c),
IF(ISNULL( Effective_Date__c ),0,TODAY() - Effective_Date__c),
IF(ISNULL( End_Date__c ),0,TODAY() - End_Date__c ),
IF(ISNULL( Endowment_Last_Contact_Date__c ),0,TODAY() - Endowment_Last_Contact_Date__c ), 
IF(ISNULL( Endowment_Last_Gift_Date__c ),0,TODAY() - Endowment_Last_Gift_Date__c ),
IF(ISNULL( Execution_Date__c ),0,TODAY() -  Execution_Date__c ),
IF(ISNULL( Expiration_Date__c ),0,TODAY() - Expiration_Date__c ),
IF(ISNULL( Patent_Application_Date__c ),0,TODAY() - Patent_Application_Date__c ),
IF(ISNULL( Patent_Issue_Date__c ),0,TODAY() - Patent_Issue_Date__c ),
IF(ISNULL( Joint_Disclosure_Date__c ),0,TODAY() - Joint_Disclosure_Date__c ),
IF(ISNULL( Created_Date__c ),0,TODAY() - Created_Date__c ),
IF(ISNULL( Source_System_Last_Modified_Date__c ),0,TODAY() - Source_System_Last_Modified_Date__c ),
IF(ISNULL( Start_Date__c ),0,TODAY() - Start_Date__c ),
IF(ISNULL( Termination_Date__c ),0,TODAY() - Termination_Date__c ),
IF(ISNULL( Endowment_Gift_Last_1__c ),0,TODAY() - Endowment_Gift_Last_1__c ),
IF(ISNULL( Endowment_Gift_Last_2__c ),0,TODAY() - Endowment_Gift_Last_2__c ),
IF(ISNULL( Endowment_Gift_Last_3__c ),0,TODAY() - Endowment_Gift_Last_3__c )
)
)</formula>
        <inlineHelpText>Days Since The Oldest Engagement Related Date</inlineHelpText>
        <label>Length Relationship In Interaction Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of Interaction</description>
        <inlineHelpText>Location of Interaction</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>Student&apos;s Major Area Of Study</description>
        <inlineHelpText>Student&apos;s Major Area Of Study</inlineHelpText>
        <label>Major</label>
        <picklist>
            <picklistValues>
                <fullName>BSAcct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSFin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMktg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAcc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA-FT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA-PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSBFin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSBScm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCMB-BSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_Of_Job_Offers__c</fullName>
        <label>Number Of Job Offers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Projects__c</fullName>
        <description>Number Of Projects implemented based on the Endowmwnt</description>
        <inlineHelpText>Number Of Projects implemented based on the Endowmwnt</inlineHelpText>
        <label>Number Of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Campus_Recruiting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Career Services - Job Postings - On Campus Recruiting is a job posting that is tied to an On Campus Interview schedule.</description>
        <label>On Campus Recruiting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Discrepancy__c</fullName>
        <formula>TEXT(Interaction_Source_KU_Division__c) &lt;&gt;  TEXT(Source_Organization__r.Source_KU_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Discrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patent_Application_Date__c</fullName>
        <description>Joint Patent Application Date</description>
        <inlineHelpText>Joint Patent Application Date</inlineHelpText>
        <label>Patent Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patent_Issue_Date__c</fullName>
        <description>Joint Patent Issue Date</description>
        <inlineHelpText>Joint Patent Issue Date</inlineHelpText>
        <label>Patent Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority For Tasks imported as Engagements</description>
        <inlineHelpText>Priority For Tasks imported as Engagements</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>